# CMakeSeries

./: .gitignore  CMakeLists.txt  main.cpp
consolelib/: CMakeLists.txt  console.cpp  console.hpp
consolelib/include/: console.hpp
